; ModuleID = '/home/carl/AnghaBench/robotjs/src/extr_color_find.c_countOfColorsInRect.c'
source_filename = "/home/carl/AnghaBench/robotjs/src/extr_color_find.c_countOfColorsInRect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__, %struct.TYPE_6__ }
%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i32 }

@MMPointZero = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @countOfColorsInRect(i32 %0, i32 %1, i64 %2, float %3) #0 {
  %5 = alloca %struct.TYPE_8__, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca float, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = bitcast %struct.TYPE_8__* %5 to i64*
  store i64 %2, i64* %11, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store float %3, float* %8, align 4
  store i64 0, i64* %9, align 8
  %12 = load i32, i32* @MMPointZero, align 4
  store i32 %12, i32* %10, align 4
  br label %13

13:                                               ; preds = %22, %4
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load float, float* %8, align 4
  %17 = load i32, i32* %10, align 4
  %18 = bitcast %struct.TYPE_8__* %5 to i64*
  %19 = load i64, i64* %18, align 4
  %20 = call i64 @findColorInRectAt(i32 %14, i32 %15, i32* %10, i64 %19, float %16, i32 %17)
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %22, label %33

22:                                               ; preds = %13
  %23 = load i32, i32* %10, align 4
  %24 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %5, i32 0, i32 1
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %5, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @ITER_NEXT_POINT(i32 %23, i32 %26, i32 %29)
  %31 = load i64, i64* %9, align 8
  %32 = add i64 %31, 1
  store i64 %32, i64* %9, align 8
  br label %13

33:                                               ; preds = %13
  %34 = load i64, i64* %9, align 8
  ret i64 %34
}

declare dso_local i64 @findColorInRectAt(i32, i32, i32*, i64, float, i32) #1

declare dso_local i32 @ITER_NEXT_POINT(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
